// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors if the event has no object key 1`] = `
"[
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "detail",
      "s3ObjectDetails",
      "objectKey"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]"
`;

exports[`errors if the event has no version id 1`] = `
"[
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "detail",
      "s3ObjectDetails",
      "versionId"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]"
`;

exports[`errors if the event has no virus scan status 1`] = `
"[
  {
    "code": "invalid_value",
    "values": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid input: expected \\"NO_THREATS_FOUND\\""
  }
]"
`;

exports[`errors if the event has virus scan status ACCESS_DENIED 1`] = `
"[
  {
    "code": "invalid_value",
    "values": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid input: expected \\"NO_THREATS_FOUND\\""
  }
]"
`;

exports[`errors if the event has virus scan status FAILED 1`] = `
"[
  {
    "code": "invalid_value",
    "values": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid input: expected \\"NO_THREATS_FOUND\\""
  }
]"
`;

exports[`errors if the event has virus scan status THREATS_FOUND 1`] = `
"[
  {
    "code": "invalid_value",
    "values": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid input: expected \\"NO_THREATS_FOUND\\""
  }
]"
`;

exports[`errors if the event has virus scan status UNSUPPORTED 1`] = `
"[
  {
    "code": "invalid_value",
    "values": [
      "NO_THREATS_FOUND"
    ],
    "path": [
      "detail",
      "scanResultDetails",
      "scanResultStatus"
    ],
    "message": "Invalid input: expected \\"NO_THREATS_FOUND\\""
  }
]"
`;
